[package]
name = "turingrs"
version = "0.1.0"
authors = ["Jeffrey Finkelstein <jeffrey.finkelstein@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
